testData/org/elixir_lang/inspection/keywords_not_at_end_test_case/MatchedWhenNoParenthesesKeywordsOperationInMiddle.ex
Alias.(
  one,
  two when <error descr="Keywords appear before the end of list.  Move keywords after positional arguments.">two: type</error>,
  three
)